[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/boceto.png" type="Texture" id=1]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=2]
[ext_resource path="res://sprites/musico-tocando-ilustracion-saxofon_107173-14301.jpg" type="Texture" id=3]
[ext_resource path="res://sprites/EwkQh-SWQAInZn8.png" type="Texture" id=4]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 2 )

[node name="layer1" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 3000, 3000 )

[node name="Obras-teatro-municipal-telon" type="Sprite" parent="layer1"]
position = Vector2( 524.038, 310.703 )
scale = Vector2( 1.94688, 1.87415 )
texture = ExtResource( 1 )

[node name="musico1" type="ParallaxLayer" parent="."]

[node name="EwkQh-SwqainZn8" type="Sprite" parent="musico1"]
position = Vector2( 342, 358 )
scale = Vector2( 0.4, 0.44 )
texture = ExtResource( 4 )

[node name="musico2" type="ParallaxLayer" parent="."]
scale = Vector2( 0.3, 0.38 )

[node name="Musico-tocando-ilustracion-saxofon107173-14301" type="Sprite" parent="musico2"]
position = Vector2( 2323.33, 928.948 )
texture = ExtResource( 3 )

[node name="musico3" type="ParallaxLayer" parent="."]

[node name="musico4" type="ParallaxLayer" parent="."]
